settings page html

--- a/templates/portal.html
+++ b/templates/portal.html
@@ -36,7 +36,7 @@
         id="contentFrame"
         class="w-full"
         style="height: calc(100vh - 4rem); border: none"
-        src="./recordofachievement"
+        src="./hours"
       ></iframe>
     </main>
 
