--- a/templates/settings.html
+++ b/templates/settings.html
@@ -4,6 +4,76 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SVA - Settings</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
-  <body></body>
+  <body class="bg-gray-100 p-8 grid grid-cols-2 gap-8">
+    <!-- user settings-->
+    <div class="bg-white shadow-md p-6">
+      <h2 class="text-xl font-semibold mb-4">User Settings</h2>
+      <form class="space-y-4">
+        <div>
+          <label class="block text-sm font-medium text-gray-700"
+            >Username</label
+          >
+          <input
+            type="text"
+            class="mt-1 block w-full border border-gray-300 rounded-md p-2"
+            value="john_doe"
+          />
+        </div>
+        <div>
+          <label class="block text-sm font-medium text-gray-700">Email</label>
+          <input
+            type="email"
+            class="mt-1 block w-full border border-gray-300 rounded-md p-2"
+            value="example@example.com"
+          />
+        </div>
+        <button
+          type="submit"
+          class="bg-blue-600 text-white px-4 py-2 hover:bg-blue-700"
+        >
+          Save Changes
+        </button>
+      </form>
+    </div>
+    <!-- school -->
+    <div class="bg-white shadow-md p-6">
+      <h2 class="text-xl font-semibold mb-4">School Selection</h2>
+      <div class="grid grid-cols-2 gap-4">
+        <div class="">
+          <!-- select school -->
+          <label class="block text-sm font-medium text-gray-700"
+            >Select School</label
+          >
+          <select
+            class="mt-1 block w-full border border-gray-300 rounded-md p-2"
+          >
+            <option>School A</option>
+            <option>School B</option>
+            <option>School C</option>
+          </select>
+          <button
+            class="mt-4 bg-blue-600 text-white px-4 py-2 hover:bg-blue-700 w-full"
+          >
+            Update School
+          </button>
+        </div>
+        <div class="flex flex-col gap-4 text-right">
+          <!-- school details -->
+          <div class="flex flex-col">
+            <h3 class="text-lg font-semibold">School A</h3>
+            <p class="text-sm text-gray-600">123 Main St, City, Country</p>
+          </div>
+          <!-- contact person -->
+          <div class="flex flex-col">
+            <h4 class="text-lg font-semibold mb-2">Contact Person</h4>
+            <p class="text-sm text-gray-600">Jane Smith</p>
+            <p class="text-sm text-gray-600">jane.smith@schoola .com</p>
+            <p class="text-sm text-gray-600">+123 456 7890</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
