--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,16 @@
   <body class="bg-gray-100 w-screen h-screen flex items-center justify-center">
     <div class="bg-white p-6 rounded shadow-md w-96">
       <h2 class="text-2xl font-bold mb-4">Login</h2>
+
+      <!-- error message -->
+      {% if error %}
+      <div
+        class="mb-4 p-3 rounded bg-red-100 text-red-700 border border-red-400"
+      >
+        {{ error }}
+      </div>
+      {% endif %}
+
       <form action="/login" method="POST">
         <div class="mb-4">
           <label for="username" class="block text-sm font-medium text-gray-700"
