--- a/templates/portal.html
+++ b/templates/portal.html
@@ -28,6 +28,12 @@
           >
             Settings
           </button>
+          <button
+            class="px-3 py-2 border-b-2 focus:outline-none hover:text-blue-500 inactive"
+            onclick="window.location.href='/login'"
+          >
+            Logout
+          </button>
         </div>
       </div>
     </nav>
